added some unit tests

--- a/VendingMachine/Views/Home/Index.cshtml
+++ b/VendingMachine/Views/Home/Index.cshtml
@@ -129,7 +129,8 @@
                 getProductsUrl: appFolder + 'api/products',
                 getProductUrl: appFolder + 'api/products',
                 payProductUrl: appFolder + 'api/purchase',
-                tenderCashUrl: appFolder + 'api/customercash'
+                tenderCashUrl: appFolder + 'api/customercash/add',
+                refundCashUrl: appFolder + 'api/customercash/refund'
             }));
         });
     </script>
